# cloudnew

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py  router.py
backend/app/api/routes/: compare.py  estimate.py  health.py  recommendations.py
backend/app/auth/: __init__.py  firebase.py  models.py
backend/app/core/: config.py  errors.py  exceptions.py  responses.py
backend/app/engines/: __init__.py
backend/app/engines/estimation/: __init__.py  calculators.py
backend/app/engines/recommendation/: rules.py
backend/app/integrations/aws/: __init__.py  clients.py  constants.py  gateway.py  mappers.py  parser.py
backend/app/modeling/: schemas.py
backend/app/services/: contracts.py  estimation_service.py  recommendation_service.py
backend/tests/: test_api.py  test_estimation_engine.py  test_mappers_and_parser.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.jsx
frontend/src/app/: App.jsx  AppShell.jsx
frontend/src/auth/: AuthContext.jsx  ProtectedRoute.jsx  firebase.js
frontend/src/components/charts/: ComparisonChart.jsx  CostBreakdownChart.jsx
frontend/src/components/forms/: CompareForm.jsx  ConfigurationFields.jsx  DynamicEstimateForm.jsx  (+1 more)
frontend/src/config/: serviceCatalog.js
frontend/src/pages/: ComparePage.jsx  DashboardPage.jsx  LoginPage.jsx
frontend/src/services/: apiClient.js  costAdvisorApi.js
frontend/src/styles/: global.css
frontend/src/utils/: formState.js  formState.test.js
