[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "smart-cloud-cost-estimator-backend"
version = "0.1.0"
description = "Production-style FastAPI backend for AWS cloud cost estimation and optimization."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.35.0,<2.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "firebase-admin>=6.5.0,<7.0.0",
  "pandas>=2.2.0,<3.0.0",
  "pydantic-settings>=2.5.0,<3.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

